--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
                 </header>
                 <div class="row content-form">
                     <div class="col col-md-10 mr-md-auto ml-md-auto">
-                      <form action="#" id="request-quote">
-                                  
+                      <form action="#" id="request-quote">                   
                                     <div class="form-group">
                                         <label class="full-width" for="make">مدل خودرو:</label>
                                         <select class="form-control" id="make">
@@ -40,25 +39,23 @@
                                     </div>
                                     <fieldset class="form-group">
                                         <div class="row">
-                                            <legend class="col-form-legend full-width col-12">نوع بیمه</legend>
-
-                                          <div dir="rtl" class="col-12 full-width">
-                                              <div class="form-check padding-right">
-                                                <label class="form-check-label">
-                                                  ساده - شخص ثالث
-                                                </label>
-                                                <input  class="form-check-input" type="radio" name="level" value="basic" checked>
+                                            <span class="col-form-legend full-width col-12">نوع بیمه</span>
+                                            <div dir="rtl" class="col-12 full-width">
+                                                <div class="form-check padding-right">
+                                                  <label class="form-check-label">
+                                                    ساده - شخص ثالث
+                                                  </label>
+                                                  <input  class="form-check-input" type="radio" name="level" value="basic" checked>
                                             </div>
                                             <div class="form-check padding-right">
-                                                <label class="form-check-label">
-                                                  کامل - شخص ثالث با بیمه بدنه
-                                                </label>
-                                                <input class="form-check-input" type="radio" name="level" value="complete">  
+                                                  <label class="form-check-label">
+                                                    کامل - شخص ثالث با بیمه بدنه
+                                                  </label>
+                                                  <input class="form-check-input" type="radio" name="level" value="complete">  
                                             </div>
                                           </div>
                                         </div>
                                   </fieldset>
-
                               <div id="loading">
                                   <img src="img/spinner.gif">
                               </div>
