Add favicon and Change bg

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Material Design for Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap-material-design.min.css" integrity="sha384-R80DC0KVBO4GSTw+wZ5x2zn2pu4POSErBkf8/fSFhPXHxvHJydT0CSgAP2Yo2r4I" crossorigin="anonymous">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="shortcut icon" href="./assets/svg/javascript.svg" type="image/x-icon">
     <title>محاسبه آنلاین قیمت بیمه خودرو</title>
   </head>
   <body>
@@ -57,7 +58,7 @@
                                         </div>
                                   </fieldset>
                               <div id="loading">
-                                  <img src="img/spinner.gif">
+                                  <img src="./assets/img/spinner.gif">
                               </div>
                               <div id="result"></div>
                               <div class="form-group">
